// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<InternalFormItem
  label="Resolution"
>
  <Row>
    <Col
      span={16}
    >
      <Slider
        max={3}
        min={0}
        onChange={[Function]}
        value={0}
      />
    </Col>
    <Col
      span={8}
    >
      <ForwardRef
        disabled={true}
        value="Low (100 DPI)"
      />
    </Col>
  </Row>
</InternalFormItem>
`;

exports[`should render correctly 2`] = `
<InternalFormItem
  label="Resolution"
>
  <Row>
    <Col
      span={16}
    >
      <Slider
        max={3}
        min={0}
        onChange={[Function]}
        value={1}
      />
    </Col>
    <Col
      span={8}
    >
      <ForwardRef
        disabled={true}
        value="Medium (250 DPI)"
      />
    </Col>
  </Row>
</InternalFormItem>
`;

exports[`should render correctly 3`] = `
<InternalFormItem
  label="Resolution"
>
  <Row>
    <Col
      span={16}
    >
      <Slider
        max={3}
        min={0}
        onChange={[Function]}
        value={2}
      />
    </Col>
    <Col
      span={8}
    >
      <ForwardRef
        disabled={true}
        value="High (500 DPI)"
      />
    </Col>
  </Row>
</InternalFormItem>
`;

exports[`should render correctly 4`] = `
<InternalFormItem
  label="Resolution"
>
  <Row>
    <Col
      span={16}
    >
      <Slider
        max={3}
        min={0}
        onChange={[Function]}
        value={3}
      />
    </Col>
    <Col
      span={8}
    >
      <ForwardRef
        disabled={true}
        value="Ultra High (1000 DPI)"
      />
    </Col>
  </Row>
</InternalFormItem>
`;
